<resources>
    <string name="app_name">Save My Place</string>
    <string name="email">E-mail</string>
    <string name="login">Sign in</string>
    <string name="signup_question">Don\'t have an account ? SignUp</string>
    <string name="signin">Sign in</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="savemyplace">Save My Place</string>
    <string name="ok">Ok</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_home_">Map</string>
    <string name="title_activity_home_activity">Map</string>
    <string name="dropped_pin">Dropped_pin</string>
    <string name="add_my_place">Add to my places</string>
    <string name="add_my_wishlist">Add to my wishlist</string>
    <string name="write_details">Write the place details </string>
    <string name="place_name">Write the place\'s name </string>
    <string name="place_description">Write the place\'s description </string>
    <string name="select_date">Select the date</string>
    <string name="show_date"></string>
    <string name="done">done</string>
    <string name="year">2020</string>
    <string name="year_date">Expected date</string>
    <string name="my_wish_list">My WishList</string>
    <string name="empty_wish_list">Your WishList is empty..Come on and add your dream place</string>
    <string name="add_wish">Add to your WishList</string>
    <string name="my_places_title">My Places</string>
    <string name="empty_myplaces">Your Places is empty..Come on and add the places you have visited before</string>
    <string name="add_places">Add to your Places</string>
</resources>
