<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<Button
    android:id="@+id/add_myplaces_button_view"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:text="@string/add_my_place"
    android:textColor="@color/white"
    android:textSize="18sp"
    android:textStyle="bold"
    android:fontFamily="cursive"
    android:layout_margin="20dp"
    android:background="@drawable/button_background"/>

    <Button
        android:id="@+id/add_mywishlist_button_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_myplaces_button_view"
        android:text="@string/add_my_wishlist"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_margin="20dp"
        android:background="@drawable/button_background"/>

    <Button
        android:id="@+id/cancel_button_view_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_mywishlist_button_view"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:fontFamily="cursive"
        android:layout_margin="20dp"
        android:background="@drawable/button_background"/>



</androidx.constraintlayout.widget.ConstraintLayout>