<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">


       <ImageView
           android:layout_height="200dp"
           android:layout_width="200dp"
           android:layout_margin="10dp"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           android:src="@drawable/logo"
           android:id="@+id/logo_image"/>

       <TextView
           android:layout_height="wrap_content"
           android:layout_width="match_parent"
           app:layout_constraintStart_toStartOf="parent"
           android:id="@+id/signin_label"
           android:textColor="@color/blue"
           android:textStyle="bold"
           android:fontFamily="cursive"
           android:textSize="30sp"
           android:layout_marginLeft="25dp"
           android:text="@string/login"
           app:layout_constraintTop_toBottomOf="@id/logo_image"/>

       <TextView
           android:layout_height="wrap_content"
           android:layout_width="match_parent"
           app:layout_constraintStart_toStartOf="parent"
           android:id="@+id/email_label"
           android:textColor="@color/blue"
           android:textStyle="bold"
           android:fontFamily="cursive"
           android:textSize="18sp"
           android:layout_marginLeft="30dp"
           android:layout_marginRight="30dp"
           android:text="@string/email"
           app:layout_constraintTop_toBottomOf="@id/signin_label"
           android:layout_marginTop="25dp"/>

       <EditText
           android:layout_height="40dp"
           android:layout_width="match_parent"
           app:layout_constraintStart_toStartOf="parent"
           android:id="@+id/email_edit_text"
           android:background="@drawable/edit_text_background"
           android:textStyle="bold"
           android:fontFamily="cursive"
           android:textSize="18sp"
           app:layout_constraintTop_toBottomOf="@id/email_label"
           android:padding="5dp"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="40dp"
           android:layout_marginRight="40dp"/>

       <TextView
           android:layout_height="wrap_content"
           android:layout_width="match_parent"
           app:layout_constraintStart_toStartOf="parent"
           android:id="@+id/password_label"
           android:textColor="@color/blue"
           android:textStyle="bold"
           android:fontFamily="cursive"
           android:textSize="18sp"
           android:layout_marginLeft="30dp"
           android:layout_marginRight="30dp"
           android:text="@string/password"
           app:layout_constraintTop_toBottomOf="@id/email_edit_text"
           android:layout_marginTop="10dp"/>

       <EditText
           android:layout_height="40dp"
           android:layout_width="match_parent"
           app:layout_constraintStart_toStartOf="parent"
           android:id="@+id/password_edit_text"
           android:textColor="@color/blue"
           android:textStyle="bold"
           android:fontFamily="cursive"
           android:background="@drawable/edit_text_background"
           android:textSize="18sp"
           app:layout_constraintTop_toBottomOf="@id/password_label"
           android:layout_marginTop="10dp"
           android:padding="5dp"
           android:layout_marginLeft="40dp"
           android:layout_marginRight="40dp"/>

       <Button
           android:background="@drawable/button_background"
           android:layout_height="wrap_content"
           android:layout_width="wrap_content"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           android:id="@+id/signin_button_view"
           android:textColor="@color/white"
           android:textStyle="bold"
           android:fontFamily="cursive"
           android:text="@string/signin"
           app:layout_constraintTop_toBottomOf="@id/password_edit_text"
           android:layout_marginTop="25dp"/>

       <TextView
           android:id="@+id/signup_question"
           android:layout_width="wrap_content"
           android:layout_height="25dp"
           android:layout_margin="20dp"
           android:layout_marginStart="20dp"
           android:layout_marginTop="20dp"
           android:layout_marginEnd="20dp"
           android:layout_marginBottom="20dp"
           android:fontFamily="cursive"
           android:text="@string/signup_question"
           android:textColor="@drawable/color_question"
           android:textSize="18sp"
           android:textStyle="bold"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@id/signin_button_view" />






   </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>