<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signup_Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_height="200dp"
            android:layout_width="200dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp" />




        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/email_edit_text_signup"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textColor="@color/blue" />
        <EditText
            android:id="@+id/password_edit_text_signup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/password_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/logo_image"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/email"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:textSize="18sp"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textColor="@color/blue" />
        <EditText
            android:id="@+id/email_edit_text_signup"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/email_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:textSize="18sp"
            android:fontFamily="cursive"
            android:textStyle="bold"
            android:textColor="@color/blue" />
        <Button
            android:id="@+id/signup_button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:text="@string/signup"/>





    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>